# better_clipboard_wayland

./: Cargo.toml  README.md
src/: daemon.rs  error.rs  ipc.rs  main.rs  storage.rs  watcher.rs
systemd/: cbm.service
