[package]
name = "cbm"
version = "0.1.0"
edition = "2021"
description = "Clipboard history daemon + CLI for Linux (X11 + Wayland)"
license = "MIT"

[[bin]]
name = "cbm"
path = "src/main.rs"

[dependencies]
# Clipboard access — supports X11 (x11rb) and Wayland (wayland-client) out of the box.
# No external tools (xclip/wl-clipboard) required.
arboard = "3"

# CLI argument parsing.
clap = { version = "4", features = ["derive"] }

# SQLite storage — "bundled" statically links libsqlite3 (no system dep needed).
rusqlite = { version = "0.31", features = ["bundled"] }

# IPC serialization over the Unix socket.
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Content hashing for dedup.
sha2 = "0.10"
hex  = "0.4"

# Logging.
log        = "0.4"
env_logger = "0.11"

# XDG base directories (data dir, runtime dir).
dirs = "5"

[profile.release]
strip     = true
opt-level = 2
